Fri Jun 18 06:34:43 BST 2004 Scott James Remnant <scott@netsplit.com>

  * archtable: Requested the technical committee to make the mentioned
  decision -- we're going with amd64 (that'll please my boss :-)
  * scripts/dpkg-architecture.pl: Likewise.

Tue Jun 15 19:19:36 BST 2004 Bartosz Fenski aka fEnIo <fenio@o2.pl>

  * po/pl.po: Updated.

Mon Jun 14 09:35:30 BST 2004 Ruben Porras <nahoo82@telefonica.net>

  * man/es/dpkg-scanpackages.1, man/es/start-stop-daemon.8, 
  man/es/dpkg-scansources.1, man/es/dpkg.8, man/es/dpkg-checkbuilddeps.1, 
  man/es/dselect.8, man/es/dpkg-deb.1: Updated again from the BTS, for
  some reason the previous update lost the foreign characters.

Mon Jun 14 09:12:08 BST 2004 Scott James Remnant <scott@netsplit.com>

  * scripts/dpkg-divert.8: Correct typo (ibrary -> library).

Mon Jun 14 08:58:27 BST 2004 Lele Gaifax <lele@nautilus.homeip.net>

  * po/it.po: Updated.

Mon Jun 7 17:47:13 CEST 2004 Jordi Mallach <jordi@debian.org>

  * po/ca.po: Update Catalan translation.

Thu Jun 3 12:03:49 BRT 2004 Scott James Remnant <scott@netsplit.com>

  * archtable, scripts/dpkg-architecture.pl: Remove support for amd64/x86-64,
  the porters clearly can't make up their mind what they want.

Wed Jun 2 15:32:47 BRT 2004 Scott James Remnant <scott@netsplit.com>

  * version-nr, debian/changelog: Bump version to 1.10.23.

Tue Jun 1 17:42:58 BRT 2004 Scott James Remnant <scott@netsplit.com>

  * scripts/Makefile.in: Move dpkg-scanpackages and dpkg-scansources
  manpages to section 1.
  * scripts/dpkg-scanpackages.8: Renamed to dpkg-scanpackages.1, adjusted
  reference to dpkg-scansources.
  * scripts/dpkg-scansources.pl: Adjusted reference to dpkg-scanpackages.
  * dselect/dselect.8: Adjusted reference to dpkg-scanpackages.

  * man/es/Makefile.in: Move dpkg-scanpackages and dpkg-scansources
  manpages to section 1.
  * man/es/dpkg-scanpackages.8: Renamed to dpkg-scanpackages.1, adjusted
  reference to dpkg-scansources.