@@ -1,3 +1,9 @@
+Fri Jun 18 11:49:21 BST 2004 Ognyan Kulev <ogi@fmi.uni-sofia.bg>
+
+  * utils/start-stop-daemon.c: Moved pid_is_running inside OSHURD sentry,
+  provided Hurd version.  Removed dependency on C99 code and replaced
+  constructor with an init function.
+
 Fri Jun 18 06:34:43 BST 2004 Scott James Remnant <scott@netsplit.com>
 
   * archtable: Requested the technical committee to make the mentioned
